# cpp_binary_size

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: fmt.cmake  get_cpm.cmake  mold.cmake
cmake/toolchain/: ra4m1.cmake  rv32imac.cmake  stm32f4.cmake
configs/gdb/: read_timer.sh.in  stm32f4_read_timer.gdb
configs/openocd/: ra4m1.cfg
renode/: add_ccm.repl  stm32f4.resc.in
src/: CMakeLists.txt
src/experiments/: CMakeLists.txt
src/experiments/baseline/: baseline.cpp
src/experiments/container_access/: operator_at.cpp  operator_subscript.cpp
src/experiments/ctors/: string_assign.cpp  string_move.cpp  string_rule_of_zero.cpp
src/experiments/data_container/: map.cpp  repetition.txt  tuple_algorithm.cpp  tuple_for.cpp  unordered_map.cpp  vector.cpp
src/experiments/factory/: concepts.cpp  virtual.cpp
src/experiments/formatting/: fmt_4_7.cpp  fmt_5_7_format_to_n.cpp  fmt_8_11.cpp  fmt_8_11_compile.cpp  fmt_8_11_compile_format_to_n.cpp  fmt_8_11_format_to_n.cpp  format.cpp  format_to_n.cpp  repetition.txt  repetition_compile.txt  repetition_compile_format_to_n.txt  repetition_format_to_n.txt
src/experiments/hello_world/: hal_uart.cpp  iostream.cpp  iostream_module.cxx  stdio_fwrite.cpp  stdio_putc.cpp  stdio_putchar.cpp  stdio_puts.cpp
src/experiments/inline/: birds.cpp  birds_inline.cpp  birds_template.cpp  dead_code_inline.cpp  dead_code_orig.cpp
src/experiments/template/: alias.cpp  alias_channels.cpp  concepts_channels.cpp  if_constexpr.cpp  if_constexpr_channels.cpp  repetition.txt  repetition_channels.txt  sfinae.cpp  sfinae_channels.cpp
src/experiments/type_erasure/: 100_copies.txt  inheritance.cpp  inheritance_copy.cpp  inheritance_sbo.cpp  static_func.cpp  static_func_copy.cpp  static_func_sbo.cpp  v_table.cpp  v_table_copy.cpp  v_table_sbo.cpp
src/experiments/unique_ptr/: make_unique.cpp  make_unique_emplace.cpp  new_emplace.cpp  new_static_cast_emplace.cpp
src/experiments/visitor/: class_overload.cpp  get_if.cpp  holds_alternative.cpp  if_else.cpp  overloaded.cpp  repetition.txt  switch.cpp
src/utils/: CMakeLists.txt  random_inputs.h
tools/: enter_repetition.sh
